@@ -7,7 +7,7 @@ export SLSH_PATH="$SLSHROOT/lib:$ROOT/modules"
 export SLANG_MODULE_PATH="`pwd`/../${ARCH}objs"
 export LD_LIBRARY_PATH="$ROOT/src/${ARCH}elfobjs"
 
-run_test_pgm="$SLSHROOT/${ARCH}objs/slsh_exe -n"
+run_test_pgm="$SLSHROOT/${ARCH}objs/slsh_exe -n -g"
 runprefix=""
 #runprefix="valgrind --tool=memcheck --leak-check=yes --error-limit=no --num-callers=25"
 #runprefix="gdb --args"
